--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 #container {
-  width: 500px;
+  width: 550px;
   margin: 0 auto;
   background: pink;
   padding: 10px 40px 40px 40px;
@@ -12,6 +12,7 @@
 
 .question {
   font-weight: bold;
+  margin: 10px 0;
 }
 
 
@@ -21,7 +22,7 @@
 }
 
 input {
-  margin: 10px 5px;
+  margin: 5px;
 }
 
 .correct {
@@ -32,4 +33,10 @@ input {
 .miss {
   font-weight: bold;
   color: blue;
+}
+
+.error {
+  color: red;
+  display: inline-block;
+  margin: 0;
 }
